modified project name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "new-app-1",
-  "version": "0.1.0",
+  "name": "hairdresser_beauty",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
