--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-spring/web": "^9.7.3",
     "@stitches/react": "^1.2.8",
@@ -24,11 +27,11 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "lucide-react": "^0.290.0",
-    "next": "13.5.6",
+    "next": "^14.0.1",
     "primereact": "^10.0.7",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
